# twemoji-colr-font

./: .gitmodules  README.md  emoji.json  fill_emojis.py  gen-segoeui.py  generate-fluent.py  generate.py  pyproject.toml
.github/workflows/: build.yml
