[project]
name = "twemoji-colr-font"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nanoemoji",
]

[tool.uv.sources]
nanoemoji = { git = "https://github.com/Nerixyz/nanoemoji.git", rev = "132f9b4f3be20ab4d93b6baab3cd4718cd52c1c4" }
